--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+/*----------------------fonts-----------------------------*/
+
+@font-face {
+  font-family: 'Amatic SC', cursive;
+  font-style: normal;
+  font-weight: 700;
+  src: url('./fonts/AmaticSC-Bold.ttf') format('ttf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Amatic SC', cursive;
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/AmaticSC-Regular.ttf') format('ttf');
+}
+
+
+/*--------------------------------------------------------*/
+
+
+:root {
+  --main-fonts: 'Amatic SC', cursive, Arial, sans-serif;
+  --bg-color-main: rgba(58, 75, 86, .4);
+  --primary-color: rgba(58, 75, 86, .7);
+  --border-radius: 5px;
+}
+
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--main-fonts);
+  background-color: var(--bg-color-main);
+  color: var(--primary-color);
 }
