--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -15,6 +15,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 60%;
+    overflow: hidden;
 }
 
 .title {
@@ -47,6 +49,7 @@
 .buttons input {
     position: relative;
     top: 3px;
+    z-index: 1;
 }
 
 .buttons label {
