--- a/src/components/TodoFilter/TodoFilter.module.css
+++ b/src/components/TodoFilter/TodoFilter.module.css
@@ -12,3 +12,14 @@
 .search legend {
     font-size: 24px;
 }
+
+.search label {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 1145px) {
+    .search {
+      flex-direction: column;
+    }
+  }
